--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,3 @@
-background: 'stylesheet/Background.png'
+background: stylesheet/Background.png
+theme-override : stylesheet/css/PITCHME.css
 #logo: 'stylesheet/DondersLogo.png'
-theme-override : 'stylesheet/css/PITCHME.css'
