--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,3 @@
 background: stylesheet/Background.png
-theme-override : stylesheet/css/PITCHME.css
+theme-override : css/PITCHME.css
 #logo: 'stylesheet/DondersLogo.png'
