--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,3 @@
-background: stylesheet/Background.png
+background: images/Background.png
 theme-override : css/PITCHME.css
 #logo: 'stylesheet/DondersLogo.png'
